# embevity_zadanie

./: 2023-01-16-15-33-09-imu.csv  CMakeLists.txt  ICM_42670_defs.h  README  accel_app.c  accelerometer.c  accelerometer.h  argshelper.c  argshelper.h  freefall.c  freefall.h  freefall_ut.c  i2c_emulated.c  i2c_emulated.h  imu_emu.cpp  imui2c.cpp  imui2c.h  queueidfile
src/: accelerometer.c  accelerometer.h  argshelper.h  i2c_emulated.h  imu_emu.cpp  imui2c.cpp
